--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    :root {
+      --background: 255 255 255;
+      --foreground: 0 0 0;
+    }
+    .dark {
+      --background: 0 0 0;
+      --foreground: 255 255 255;
+    }
+    body {
+      background: rgb(var(--background));
+      color: rgb(var(--foreground));
+    }
+  }
+
